# MetaHumanAssistant

./: .env.example  .gitignore  README.md  package-lock.json
backend/: app.py  debug_memory.py  pyproject.toml  requirements.txt  vision.js
backend/api/: audio_router.py  auth_router.py  chat_router.py
backend/config/: settings.py
backend/models/: database.py
backend/services/: llm_service.py  stt_service.py  tts_service.py
backend/utils/: result.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  env.d.ts
web/src/api/: index.ts
web/src/components/ChatPanel/: ChatBubble.vue  ChatPanel.vue
web/src/components/ControlBar/: ControlBar.vue
web/src/components/DanmakuLayer/: DanmakuLayer.vue
web/src/components/SessionSidebar/: SessionSidebar.vue
web/src/components/SettingsPanel/: SettingsPanel.vue
web/src/components/VirtualHuman/: VirtualHuman.vue  useAvatar.ts  useThreeScene.ts
web/src/composables/: useAudio.ts
web/src/stores/: chat.ts  settings.ts
web/src/styles/: global.css  variables.css
web/src/types/: index.ts
